--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "99designs/phumbor": "1.0.0",
         "symfony/config": "~2.4",
         "symfony/http-kernel": "~2.4",
-        "symfony/dependency-injection": "~2.4"
+        "symfony/dependency-injection": "~2.4",
+        "twig/extensions": "~1.0"
     },
     "autoload": {
         "psr-0": { "Jb\\Bundle\\PhumborBundle": "" }
