add twig function and change default server url

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -21,4 +21,4 @@ services:
         arguments:
             - @phumbor.url.transformer
         tags:
-            - { name: twig_extension }
+            - { name: twig.extension }
