--- a/Tests/phpunit.xml.dist
+++ b/Tests/phpunit.xml.dist
@@ -16,4 +16,9 @@
             <directory>.</directory>
         </testsuite>
     </testsuites>
+    <filter>
+        <blacklist>
+            <directory>../vendor</directory>
+        </blacklist>
+    </filter>
 </phpunit>
