--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "homepage": "https://github.com/jbouzekri/PhumborBundle",
     "license": "MIT",
     "require": {
-        "99designs/phumbor": "1.0.0"
+        "99designs/phumbor": "1.1.x"
     },
     "require-dev": {
         "symfony/config": "~2.4",
