--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ before_script:
   - wget https://scrutinizer-ci.com/ocular.phar
 
 script:
-  - phpunit -c Tests/ --coverage-clover=coverage.clover
+  - vendor/bin/phpunit -c Tests/ --coverage-clover=coverage.clover
   - phpcs --standard=PSR2 --extensions=php --ignore=vendor .
   - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
