--- a/Tests/phpunit.xml.dist
+++ b/Tests/phpunit.xml.dist
@@ -7,7 +7,6 @@
          convertWarningsToExceptions="true"
          processIsolation="false"
          stopOnFailure="false"
-         syntaxCheck="false"
          bootstrap="bootstrap.php"
 >
 
@@ -17,8 +16,12 @@
         </testsuite>
     </testsuites>
     <filter>
-        <blacklist>
-            <directory>../vendor</directory>
-        </blacklist>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">.</directory>
+            <exclude>
+                <directory>vendor</directory>
+                <directory>Tests</directory>
+            </exclude>
+        </whitelist>
     </filter>
 </phpunit>
