--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
         "webfactory/phumbor": "^1.1"
     },
     "require-dev": {
-        "symfony/config": "~2.4",
-        "symfony/http-kernel": "~2.4",
-        "symfony/dependency-injection": "~2.4",
-        "twig/extensions": "~1.0",
-        "phpunit/phpunit": "~4.8|~5.7"
+        "symfony/config": "^3.4",
+        "symfony/dependency-injection": "^3.4",
+        "symfony/http-kernel": "^3.4",
+        "symfony/yaml": "^3.4",
+        "phpunit/phpunit": "^7.0",
+        "twig/extensions": "~1.0"
     },
     "autoload": {
         "psr-0": { "Jb\\Bundle\\PhumborBundle": "" }
