--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "twig/extensions": "~1.0",
         "phpunit/phpunit": "~4.8|~5.7"
     },
+    "conflict": {
+        "twig/twig": "<1.34"
+    },
     "autoload": {
         "psr-0": { "Jb\\Bundle\\PhumborBundle": "" }
     },
