--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "homepage": "https://github.com/jbouzekri/PhumborBundle",
     "license": "MIT",
     "require": {
+        "php": "^7.2|8.0.*|8.1.*",
         "webfactory/phumbor": "^1.1"
     },
     "require-dev": {
