--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,21 +7,17 @@
          convertWarningsToExceptions="true"
          processIsolation="false"
          stopOnFailure="false"
-         bootstrap="bootstrap.php"
+         bootstrap="tests/bootstrap.php"
 >
 
     <testsuites>
         <testsuite name="TestBundle Test Suite">
-            <directory>.</directory>
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">.</directory>
-            <exclude>
-                <directory>vendor</directory>
-                <directory>Tests</directory>
-            </exclude>
+            <directory suffix=".php">src</directory>
         </whitelist>
     </filter>
 </phpunit>
