--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "homepage": "https://github.com/jbouzekri/PhumborBundle",
     "license": "MIT",
     "require": {
-        "php": "^7.2|8.0.*|8.1.*",
+        "php": "^7.2|8.0.*|8.1.*|8.2.*",
         "symfony/config": "^3.4|^4.4|^5.0|^6.0",
         "symfony/dependency-injection": "^3.4|^4.4|^5.0|^6.0",
         "symfony/http-kernel": "^3.4|^4.4|^5.0|^6.0",
@@ -16,7 +16,6 @@
     "require-dev": {
         "phpunit/phpunit": "^8.5.26|^9.5.20",
         "symfony/yaml": "^3.4|^4.4|^5.0|^6.0",
-        "twig/extensions": "~1.0",
         "symfony/phpunit-bridge": ">=6.0"
     },
     "autoload": {
