--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,7 @@ jobs:
                     - { php-version: 8.1, symfony-locked-version: 6.4.*, dependency-version: prefer-stable }
                     - { php-version: 8.2, symfony-locked-version: 7.0.*, dependency-version: prefer-stable }
                     - { php-version: 8.3, symfony-locked-version: 7.0.*, dependency-version: prefer-stable }
+                    - { php-version: 8.4, symfony-locked-version: 7.0.*, dependency-version: prefer-stable }
         name: PHPUnit (PHP ${{matrix.php-version}}, Symfony Version Lock ${{ matrix.symfony-locked-version }}, ${{ matrix.dependency-version }})
         steps:
             -   uses: shivammathur/setup-php@v2
