--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "homepage": "https://github.com/jbouzekri/PhumborBundle",
     "license": "MIT",
     "require": {
-        "php": "^7.2|8.0.*|8.1.*|8.2.*|8.3.*",
+        "php": "^7.2|8.0.*|8.1.*|8.2.*|8.3.*|8.4.*",
         "symfony/config": "^3.4|^4.4|^5.0|^6.0|^7.0",
         "symfony/dependency-injection": "^3.4|^4.4|^5.0|^6.0|^7.0",
         "symfony/http-kernel": "^3.4|^4.4|^5.0|^6.0|^7.0",
