--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,5 +39,6 @@ jobs:
             -   run: composer update --no-interaction --no-scripts --no-progress --ansi --${{ matrix.dependency-version }}
                 env:
                     SYMFONY_REQUIRE: ${{ matrix.symfony-version }}
+                    COMPOSER_NO_SECURITY_BLOCKING: 1
             -   run: composer show
             -   run: vendor/bin/phpunit
